# reipc

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: connection.rs  errors.rs  ipc.rs  ipc_transport.rs  lib.rs  main.rs  manager.rs  re_ipc_transport.rs  re_manager.rs  rpc_provider.rs  rpc_reqresp.rs
