[package]
name = "reipc"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-json-rpc = "0.11.1"
alloy-rpc-types-eth = "0.11.1"
anyhow = "1.0.95"
bytes = "1.10.0"
crossbeam = "0.8.4"
dashmap = "6.1.0"
serde = "1.0.217"
serde_json = "1.0.138"

[dev-dependencies]
tempfile = "3.16.0"
pretty_assertions = "1.4.1"
