[package]
name = "reipc"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-json-rpc = "0.13.0"
alloy-primitives = { version = "0.8.15", default-features = false }
alloy-rpc-types-eth = "0.13.0"
bytes = "1.10.0"
crossbeam = "0.8.4"
dashmap = "6.1.0"
serde = { version = "1.0.210" }
serde_json = { version = "1.0.128" }
thiserror = "1.0.64"

[dev-dependencies]
tempfile = "3.16.0"
pretty_assertions = "1.4.1"
